tests/bad_unknown_symbol.stderr
tests/bad_unknown_symbol.sl:3:9: error: SL2002: unknown identifier 'missing'
