tests/bad_unknown_symbol.sl
// Verifies bad unknown symbol.
fn a(x i32) i32 {
	return missing(x)
}
